2025-07-31  Saruman the White  <eker@eker10>

	* token.cc (Token::ropeToPrefixNameCode): hoist !isprint(c) check
	out of branches
	(Token::ropeToPrefixNameCode): support UTF-8 encodings

2025-07-24  Saruman the White  <eker@eker10>

	* process.cc (SyntacticPreModule::processSubsorts): don't require
	sorts in subsort declarations to be declared

	* syntacticPreModule.hh (class SyntacticPreModule): updated decl
	for getSort()

	* process.cc (SyntacticPreModule::getSort): use line number from
	token rather than FileTable::SYSTEM_CREATED in the case of an
	undeclared sort; have option to allow undeclared sorts

2025-07-29  Rubén Rubio <rubenrub@ucm.es>

	* command.cc (printAttributes): added rpo

	* entry.cc (addOpDeclaration): handle rpo
	(addPolymorph): handle rpo

	* latexModulePrint.cc (latexShowAttributes): added rpo
	(latexShowPolymorphAttributes): added rpo

	* lexer.ll: added KW_RPO

	* mixfixModule.hh (class MixfixModule): added rpo arg
	to addOpDeclaration and addPolymorph, added getRpo and
	getPolymorphRpo methods

	* modules.yy: added rpo rules

	* ooProcess.cc (processClassOps): pass NONE rpo to
	addOpDeclaration

	* ops.cc (setRpo): added

	* process.cc (processOps): pass rpo to addPolymorph and
	addOpDeclaration

	* renameModule.cc (donateOps2): handle rpo

	* renaming.cc (makeCanonicalName): added rpo
	(isIdentityOpMapping): consider rpo
	(setRpo): added
	(printRenaming): print rpo

	* renaming.hh (class Renaming): declare setRpo and getRpo
	methods, and rpo attribute

	* symbolType.hh (class SymbolType): add RPO flag

	* syntacticPreModule.hh (class SyntacticPreModule): added
	setRpo
	(struct SyntacticPreModule::OpDef): added rpo attribute

	* top.yy: added KW_RPO

	* visibleModule.cc (showPolymorphAttributes): added rpo
	(showAttributes): added rpo

===================================Maude164===========================================

2025-07-11  Rubén Rubio <rubenrub@ucm.es>

	* makeGrammar.cc (MixfixModule::makeSpecialProductions):